# routes/cashOfferRoute.js
@@ -16,12 +16,12 @@ class CashOfferRoute extends BaseRoute {
     addAdditionalRoutes() {
         this.cashOfferController = new CashOfferController()
 
-        this.router.get("/get-all-cash-offers", authMiddleware, this.cashOfferController.getAllCashOffers.bind(this))
+        this.router.get("/get-all-cash-offers", this.cashOfferController.getAllCashOffers.bind(this))
         this.router.post("/cash-offer-clicked", authMiddleware, this.cashOfferController.cashOfferClicked.bind(this))
         this.router.get("/get-my-cash-offers", authMiddleware, this.cashOfferController.getMyCashOffers.bind(this))
         this.router.get("/view-cash-offer/:id", authMiddleware, this.cashOfferController.viewCashOffer.bind(this))
         this.router.post("/accept-reject-cash-offer", authMiddleware, this.cashOfferController.acceptRejectCashOffer.bind(this))
-        this.router.get("/search", authMiddleware, this.cashOfferController.searchCashOffer.bind(this))
+        this.router.get("/search", this.cashOfferController.searchCashOffer.bind(this))
         this.router.get("/statistics", authMiddleware, this.cashOfferController.getStatsCashOffer.bind(this))
 
     }
